# django-metrics

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
core/: settings.py  urls.py
grafana/provisioning/dashboards/: django_dashboard.json
metrics/: urls.py  views.py
metrics/database/: __init__.py  redis.py
metrics/middleware/: PrometheusMetricsMiddleware.py  RedisMetricsMiddleware.py  __init__.py
