[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metrics"
version = "0.1.0"
description = "Metrics middleware for Django"
authors = [{ name = "Hasanian", email = "hasanian.mu@gmail.com" }]
dependencies = [
    "django>=5.2.4",
    "prometheus_client==0.22.1",
		"gunicorn==23.0.0",
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/mhasanian/django-metrics"
Repository = "https://github.com/mhasanian/django-metrics"